--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="IN MINUTES"
+        android:text="IN DAYS"
         android:textColor="@color/textcolor"
         android:textSize="25sp"
         android:textStyle="bold" />
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/lightGreyText"
         android:textSize="18sp"
-        android:text="Age In Minutes"
+        android:text="Age In Days"
         />
 
 
